refactor: improve SecurityConfig by using constructor injection and optimizing CORS configuration